Fix pollutant chart heights on mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -788,7 +788,8 @@ Blocks
 }
 
 .pollutant-widget__chart-container {
-    flex: 1 1 10rem;
+    flex: 1 1 13rem;
+    min-height: 0;
     display: flex;
     flex-direction: column;
     opacity: 0;
@@ -928,6 +929,7 @@ Blocks
     max-width: 93rem;
     padding: 0 16px;
     font-family: Arial;
+    /* -webkit-text-size-adjust: 100% */
 }
 
 @media (min-width:600px) {
